[gd_scene load_steps=22 format=3 uid="uid://3jyrdo145b1v"]

[ext_resource type="Shader" path="res://addons/time-of-day/src/sky/shaders/tod_standard_sky.gdshader" id="1_t6756"]
[ext_resource type="Texture2D" uid="uid://cvqafkrcfb246" path="res://addons/time-of-day/content/textures/third-party/textures/milky-way/Milkyway.jpg" id="2_av6w8"]
[ext_resource type="Texture2D" uid="uid://bt1b2s36gjjpd" path="res://addons/time-of-day/content/textures/third-party/noise.png" id="3_xjln4"]
[ext_resource type="Texture2D" uid="uid://bg0ltx4f5n1qx" path="res://addons/time-of-day/content/textures/third-party/textures/moon-map/MoonMap.png" id="4_5q2dt"]
[ext_resource type="Texture2D" uid="uid://bvyqf03kl2e61" path="res://addons/time-of-day/content/textures/third-party/textures/milky-way/StarField.jpg" id="5_gyk4y"]
[ext_resource type="Script" path="res://addons/time-of-day/src/time-of-day/tod_manager.gd" id="6_w105k"]
[ext_resource type="Script" path="res://addons/time-of-day/src/sky/tod_sky.gd" id="7_dblke"]
[ext_resource type="Script" path="res://addons/time-of-day/src/sky/material/standard/tod_standard_material.gd" id="8_2fheb"]
[ext_resource type="Script" path="res://addons/time-of-day/src/sky/celestials/tod_sun.gd" id="9_r27e8"]
[ext_resource type="Script" path="res://addons/time-of-day/src/sky/celestials/tod_moon.gd" id="10_e7lwf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tj2tk"]
shader = ExtResource("1_t6756")
shader_parameter/tod_sun_direction = null
shader_parameter/tod_sun_disk_color = null
shader_parameter/tod_sun_disk_intensity = null
shader_parameter/tod_sun_disk_size = null
shader_parameter/tod_moon_direction = null
shader_parameter/tod_moon_color = null
shader_parameter/tod_moon_intensity = null
shader_parameter/tod_moon_size = null
shader_parameter/tod_moon_matrix = null
shader_parameter/tod_enable_night_scatter = null
shader_parameter/tod_atm_night_intensity = null
shader_parameter/tod_apply_debanding = null
shader_parameter/tod_exposure = null
shader_parameter/tod_tonemap_level = null
shader_parameter/tod_horizon_level = null
shader_parameter/tod_atm_sunE = null
shader_parameter/tod_atm_darkness = null
shader_parameter/tod_atm_thickness = null
shader_parameter/tod_atm_rayleigh_level = null
shader_parameter/tod_atm_tint = null
shader_parameter/tod_atm_night_tint = null
shader_parameter/tod_atm_beta_ray = null
shader_parameter/tod_atm_beta_mie = null
shader_parameter/tod_atm_sun_mie_tint = null
shader_parameter/tod_atm_sun_mie_intensity = null
shader_parameter/tod_atm_sun_partial_mie_phase = null
shader_parameter/tod_atm_moon_mie_tint = null
shader_parameter/tod_atm_moon_mie_intensity = null
shader_parameter/tod_atm_moon_partial_mie_phase = null
shader_parameter/tod_atm_ground_color = null
shader_parameter/tod_sun_uMuS = null
shader_parameter/tod_background_color = null
shader_parameter/tod_stars_field_color = null
shader_parameter/tod_stars_field_intensity = null
shader_parameter/tod_stars_scintillation = null
shader_parameter/tod_stars_scintillation_speed = null
shader_parameter/tod_deep_space_matrix = null
shader_parameter/tod_clouds_noise_freq = 3.0
shader_parameter/tod_clouds_smooth = 0.05
shader_parameter/tod_clouds_size = 0.5
shader_parameter/tod_clouds_shell_offset = 410.0
shader_parameter/tod_clouds_coverage = 0.7
shader_parameter/tod_clouds_absorption = 1.0
shader_parameter/tod_clouds_thickness = 0.7
shader_parameter/tod_clouds_intensity = 1.0
shader_parameter/tod_clouds_zenith_color = null
shader_parameter/tod_clouds_horizon_color = null
shader_parameter/tod_clouds_night_color = null
shader_parameter/tod_clouds_offset = null
shader_parameter/tod_clouds_offset_speed = null
shader_parameter/tod_moon_texture = ExtResource("4_5q2dt")
shader_parameter/tod_background_texture = ExtResource("2_av6w8")
shader_parameter/tod_stars_field_texture = ExtResource("5_gyk4y")
shader_parameter/tod_clouds_noise_tex = ExtResource("3_xjln4")

[sub_resource type="Sky" id="Sky_6cw6f"]
sky_material = SubResource("ShaderMaterial_tj2tk")
process_mode = 3

[sub_resource type="Environment" id="Environment_o8uwd"]
background_mode = 2
sky = SubResource("Sky_6cw6f")
tonemap_mode = 3
tonemap_white = 6.0

[sub_resource type="Gradient" id="Gradient_j6bko"]
offsets = PackedFloat32Array(0.6875, 0.834821)
colors = PackedColorArray(0.596078, 0.819608, 0.996078, 1, 1, 0.730178, 0.730178, 1)

[sub_resource type="Resource" id="Resource_hjtqi"]
script = ExtResource("8_2fheb")
apply_debanding = false
exposure = 1.0
horizon_level = 0.0
atm_wavelenghts = Vector3(680, 550, 440)
atm_darkness = 0.1
atm_sun_intensity = 15.0
atm_day_tint = Color(0.596078, 0.819608, 0.996078, 1)
atm_day_gradient = SubResource("Gradient_j6bko")
atm_night_tint = Color(0.254902, 0.337255, 0.447059, 1)
atm_rayleigh_level = 1.0
atm_thickness = 1.0
atm_mie = 0.07
atm_turbidity = 0.001
atm_ground_color = Color(0.2, 0.333, 0.494, 1)
deep_space_euler = Vector3(-0.752, -2.56, 0)
background_color = Color(0.172549, 0.172549, 0.172549, 0.560784)
use_custom_bg_texture = false
background_texture = ExtResource("2_av6w8")
stars_field_color = Color(1, 1, 1, 1)
stars_field_intensity = 1.0
use_custom_stars_field_texture = false
stars_field_texture = ExtResource("5_gyk4y")
stars_scintillation = 0.75
stars_scintillation_speed = 1.0
use_custom_clouds_noise_tex = false
clouds_noise_tex = ExtResource("3_xjln4")
clouds_noise_freq = 2.3
clouds_size = 1.0
clouds_shell_offset = -470.0
clouds_smooth = 0.085
clouds_coverage = 0.50653
clouds_absorption = 1.9
clouds_thickness = 4.0
clouds_intensity = 5.0
clouds_zenith_color = Color(0.835, 0.906, 1, 1)
clouds_horizon_color = Color(1, 0.482, 0, 1)
clouds_night_color = Color(0.1803, 0.3019, 0.5058, 1)
clouds_offset = Vector3(0.05, -0.05, 0.01)
clouds_offset_speed = 1.0
enable_night_scattering = false

[sub_resource type="Gradient" id="Gradient_qmum6"]
offsets = PackedFloat32Array(0.366379, 0.814655, 0.931035)
colors = PackedColorArray(1, 0.84551, 0.776214, 1, 1, 0.580388, 0.375046, 1, 1, 0.381623, 0.381623, 1)

[sub_resource type="Curve" id="Curve_sy4qq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.9, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w8aes"]
metallic = 0.8
roughness = 0.35

[sub_resource type="SphereMesh" id="SphereMesh_6uypu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r2iy0"]
metallic = 1.0
roughness = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l4k0i"]
roughness = 0.28

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_o8uwd")

[node name="TOD_Manager" type="Node" parent="."]
script = ExtResource("6_w105k")
sky_path = NodePath("../TOD_Sky")
total_cycle_in_minutes = 0.15
timeline = 9.68444
day = 2
year = 1

[node name="TOD_Sky" type="Node" parent="."]
script = ExtResource("7_dblke")
material = SubResource("Resource_hjtqi")
enviro_container = NodePath("../WorldEnvironment")

[node name="TOD_Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0, -0.815894, 0.578201, -0.439452, 0.519378, 0.73289, -0.898266, -0.254091, -0.358546, 0.578201, 0.73289, -0.358546)
light_color = Color(1, 0.84551, 0.776214, 1)
shadow_enabled = true
script = ExtResource("9_r27e8")
transform_type = 0
mie_color = Color(1, 0.654902, 0.458824, 1)
mie_anisotropy = 0.81184
lighting_color_gradient = SubResource("Gradient_qmum6")
lighting_energy_curve = SubResource("Curve_sy4qq")
altitude = 42.8707
azimuth = 121.803

[node name="TOD_Moon" type="DirectionalLight3D" parent="."]
transform = Transform3D(0, -0.100723, 0.994915, -0.196273, 0.975563, 0.0987634, -0.980549, -0.195275, -0.0197691, 0.994915, 0.0987634, -0.0197691)
light_color = Color(0.54, 0.7, 0.9, 1)
light_energy = 0.0
script = ExtResource("10_e7lwf")
size = 0.02025
texture = ExtResource("4_5q2dt")
enable_moon_phases = true
transform_type = 0
mie_color = Color(0.165, 0.533, 1, 1)
mie_intensity = 0.5
lighting_color = Color(0.54, 0.7, 0.9, 1)
lighting_energy = 0.3
altitude = 84.332
azimuth = 91.1383

[node name="Spheres" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
material_override = SubResource("StandardMaterial3D_w8aes")
mesh = SubResource("SphereMesh_6uypu")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Spheres"]
material_override = SubResource("StandardMaterial3D_r2iy0")
mesh = SubResource("SphereMesh_6uypu")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Spheres"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
material_override = SubResource("StandardMaterial3D_l4k0i")
mesh = SubResource("SphereMesh_6uypu")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.462635, 2.53389)
